# tutorials

how_lms_model_pls_and_how_programmers_model_lms/: .gitattributes  custom.css  humaneval_agnostic.jsonl  pyproject.toml  talk.py
llm2024/: Basics.ipynb  LLM Agents.ipynb  What Do Models Learn.ipynb
